--- a/frontend/JavaScript/ejercicios/reloj digital/style.css
+++ b/frontend/JavaScript/ejercicios/reloj digital/style.css
@@ -2,7 +2,7 @@
 
 body {
     background: rgb(22, 22, 22);
-    color: aqua;
+    color: #00a6ff;
     font-family: 'M37_FEEL THE BIT', sans-serif;
     text-align: center;
 
