--- a/frontend/JavaScript/ejercicios/cronómetro/style.css
+++ b/frontend/JavaScript/ejercicios/cronómetro/style.css
@@ -29,8 +29,9 @@ h1 div.number {
     padding: 4px 10px;
     min-width: 66px;
 }
-h1 div.number:nth-child(5) {
+h1 div:nth-child(5) {
     text-align: justify;
+    padding-left: 15px;
 }
 
 
@@ -48,6 +49,7 @@ div button {
 }
 
 div button:hover {
-    box-shadow: 0px 0px 30px 7px rgba(255, 253, 253, 0.8);
-    border: 4px solid white;
+    box-shadow: 0 0 30px 7px rgba(255, 253, 253, 0.8);
+    border-width: 4.5px;
+    font-size: 1.05rem;
 }
