--- a/frontend/JavaScript/ejercicios/calculadora/style.css
+++ b/frontend/JavaScript/ejercicios/calculadora/style.css
@@ -39,6 +39,10 @@ body {
     height: 30px;
     border-radius: 1px;
 }
+.container button:hover {
+    cursor: pointer;
+    opacity: 0.65;
+}
 
 .display input {
     width: 100%;
@@ -48,7 +52,8 @@ body {
     font-weight: bold;
     color: #1e2831;
     background: #e8ffaf;
-                                        
+                 
+    text-align: end;
 }
 
 .operators button {
